...
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/toolbar"
                android:background="?android:attr/listDivider" />

            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_below="@id/divider"
                android:paddingBottom="88dp" />

...
