<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="feedSettingsScreen">

    <SwitchPreferenceCompat
        android:icon="@drawable/ic_refresh"
        android:key="keepUpdated"
        android:summary="@string/keep_updated_summary"
        android:title="@string/keep_updated" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:dependency="keepUpdated"
        android:icon="@drawable/ic_notifications"
        android:key="episodeNotification"
        android:summary="@string/episode_notification_summary"
        android:title="@string/episode_notification" />

    <Preference
        android:icon="@drawable/ic_key"
        android:key="authentication"
        android:summary="@string/authentication_descr"
        android:title="@string/authentication_label" />

    <Preference
        android:icon="@drawable/ic_tag"
        android:key="tags"
        android:summary="@string/feed_tags_summary"
        android:title="@string/feed_tags_label" />

    <Preference
        android:icon="@drawable/ic_playback_speed"
        android:key="feedPlaybackSpeed"
        android:summary="@string/pref_feed_playback_speed_sum"
        android:title="@string/playback_speed" />

    <Preference
        android:icon="@drawable/ic_skip_24dp"
        android:key="feedAutoSkip"
        android:summary="@string/pref_feed_skip_sum"
        android:title="@string/pref_feed_skip" />

    <ListPreference
        android:entries="@array/spnAutoDeleteItems"
        android:entryValues="@array/spnAutoDeleteValues"
        android:icon="@drawable/ic_delete"
        android:key="autoDelete"
        android:summary="@string/feed_auto_download_global"
        android:title="@string/auto_delete_label" />

    <ListPreference
        android:defaultValue="off"
        android:entries="@array/spnVolumeReductionItems"
        android:entryValues="@array/spnVolumeReductionValues"
        android:icon="@drawable/ic_volume_adaption"
        android:key="volumeReduction"
        android:summary="@string/feed_volume_reduction_summary"
        android:title="@string/feed_volume_reduction" />

    <PreferenceCategory
        android:key="autoDownloadCategory"
        android:title="@string/auto_download_settings_label">

        <SwitchPreferenceCompat
            android:key="autoDownload"
            android:title="@string/auto_download_label" />

        <Preference
            android:key="episodeFilter"
            android:summary="@string/episode_filters_description"
            android:title="@string/episode_filters_label" />

    </PreferenceCategory>

</PreferenceScreen>
